<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/f_users_history_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/history"
        app:layout_constraintEnd_toEndOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/f_users_count_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_count_users"
        app:layout_constraintBottom_toBottomOf="@+id/f_users_get_btn"
        app:layout_constraintEnd_toStartOf="@+id/f_users_get_btn"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toTopOf="@+id/f_users_get_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/f_users_get_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_users"
        app:layout_constraintEnd_toEndOf="@+id/gl_end"
        app:layout_constraintTop_toBottomOf="@+id/f_users_history_btn" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/f_users_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/f_users_get_btn"
        tools:listitem="@layout/li_user"
        tools:itemCount="10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding_24" />

</androidx.constraintlayout.widget.ConstraintLayout>